apps/network-system/envoy-gateway/config/remote/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-tailscale
spec:
  gatewayClassName: envoy-tailscale

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces: {from: Same} #? same namespace only, for https redirect
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces: {from: All} #? allow all namespaces for https
      tls:
        certificateRefs:
          - kind: Secret
            name: tailscale-tls
